# sensorium_ssc

./: .gitignore  .gitlab-ci.yml  .python-version  README.rst  REUSE.toml  pyproject.toml
.github/workflows/: github-actions.yml
.gitlab/merge_request_templates/: default.md
.reuse/: ignore
configs/: sensorium.yaml  vox_semantic_kitti.yaml
docs/: conf.py  index.rst
src/data_processing/: __init__.py  dummy_module_antonija.py
src/engine/: __init__.py  dummy_modul.py
src/sensorium/: __init__.py  client.py  server.py
src/sensorium/camera/: __init__.py  dummy_camera.py
src/sensorium/camera_visualization/: camera_visualization.py
src/sensorium/communication/: __init__.py  client_comm.py  server_comm.py
src/sensorium/data_processing/: __init__.py  dummy_module_antonija.py
src/sensorium/engine/: __init__.py  chooseframe.py  dummy_modul.py  engine_run.py  ordner.py  seq.py  settings.py  visualization_gui.py
src/sensorium/launch/: __init__.py  launch.py
src/sensorium/lidar_pointcloud/: __init__.py  bin_to_ply.py  lidar_visualization.py
src/sensorium/trajectory/: __init__.py  traj.py  trajectory_code.py
src/sensorium/trajectory_on_map/: __init__.py  dummy_trajectory.py  trajectory.txt  trajectory_visualization.py
src/sensorium/visualization/: __init__.py  camera_visualization.py  lidar_visualization.py  trajectory_visualization.py  voxel_widget.py
src/sensorium/visualizer/: __init__.py
tests/: __init__.py
tests/sensorium/: __init__.py  test_client.py  test_server.py
tests/sensorium/camera/: __init__.py  test_dummy_camera.py
tests/sensorium/camera_visualization/: __init__.py  test_camera_visualization.py
tests/sensorium/communication/: __init__.py  test_client_comm.py  test_server_comm.py
tests/sensorium/data_processing/: __init__.py
tests/sensorium/engine/: __init__.py  test_chooseframe.py  test_engine.py  test_engine_run.py  test_ordner.py  test_settings.py  test_visualisation_gui.py
tests/sensorium/launch/: __init__.py  test_launch.py
tests/sensorium/lidar_pointcloud/: __init__.py  test_bin_to_ply.py  test_dummy_pointcloud.py  test_lidar_visualization.py
tests/sensorium/test_camera_visualization/: test_camera_visualization.py
tests/sensorium/test_data_processing/: test_module_antonija.py
tests/test_data_processing/: test_module_antonija.py
tests/test_engine/: dummy_test_modul.py
(+48 files in other folders)
